# TheBookofI2C

./: .gitignore  LICENSE.md  README.md
Listing10-2/ESP32/: CMakeLists.txt
Listing10-2/ESP32/main/: Kconfig.projbuild  main.cpp
Listing10-2/ESP8266/: CMakeLists.txt  Makefile
Listing10-2/ESP8266/main/: Kconfig.projbuild  main.c
Listing10-2/Pico/: CMakeLists.txt  main.cpp
Listing13-2/ESP32/: CMakeLists.txt
Listing13-2/ESP32/main/: Kconfig.projbuild  main.cpp
Listing13-2/Pico/: CMakeLists.txt  main.cpp
notes/: debian.txt  esp32.txt  esp8266.txt  pico.txt  raspberrypi.txt
